Correctif généraux et script BD v2

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Ajouter" class="fancy-button"/>
-                <a href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })' class="fancy-button rouge">Retour</a>
+                <a href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })' class="fancy-button rouge">Terminer</a>
             </div>
         </div>
     }
