--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
@@ -34,6 +34,6 @@
     @Html.Action("_PartialList")
 
     <div class="champ">
-        <a href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })' class="fancy-button rouge">Retour</a>
+        <a href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })' class="fancy-button rouge">Terminer</a>
     </div>
 </div>
