--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
@@ -21,12 +21,12 @@
             {
                 <h2>Critères de performance</h2>
 
-                <ul>
-                    @foreach (var criterePerformance in Model.CriterePerformance)
+                <ol type="1">
+                    @foreach (var criterePerformance in Model.CriterePerformance.OrderBy(ec => ec.numero))
                     {
                         <li>@Html.DisplayFor(cp => criterePerformance.criterePerformance1)</li>
                     }
-                </ul>
+                </ol>
 
                 <hr />
             }
@@ -36,6 +36,7 @@
             <div class="champ">
                 <a class="fancy-button" href='@Url.Action("Edit", new { idElement = Model.idElement })'><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
                 <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idElement = Model.idElement })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'élément</a>
+                <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })'">Retour</a>
             </div>
 
         </div>
