--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
@@ -12,15 +12,19 @@
         @Html.HiddenFor(model => model.idCompetence)
 
         <div class="form-horizontal form-box single-action">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h1>Créer un énoncé de compétence</h1>
 
             <hr />
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="champ">
+                @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+            </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.codeCompetence, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.codeCompetence, new { htmlAttributes = new { @class = "form-control small-input" } })
+                    @Html.EditorFor(model => model.codeCompetence, new { htmlAttributes = new { @maxlength = "4", @class = "form-control small-input" } })
                     @Html.ValidationMessageFor(model => model.codeCompetence, "", new { @class = "text-danger" })
                 </div>
             </div>
