--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
@@ -9,9 +9,9 @@
     <div class="icon-container">
         @if (User.IsInRole("RCP"))
         {
-            <a class="icon" href='@Url.RouteUrl("Index-programme")'>
+            <a class="icon" href='@Url.RouteUrl("Index-devisMinistere")'>
                 <span class="glyphicon glyphicon-duplicate"></span>
-                <p>Gestion des programmes</p>
+                <p>Gestion des devisMinisteres</p>
             </a>
         }
 
