--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Create.cshtml
@@ -56,7 +56,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Suivant" class="fancy-button"/>
-                    <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "Programme", new { idProgramme = Model.idProgramme })'">Annuler</div>
+                    <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "DevisMinistere", new { idDevis = Model.idDevis })'">Annuler</div>
                 </div>
             </div>
         </div>
