--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <a class="fancy-button" href='@Url.Action("DeleteConfirmed", new { idCompetence = Model.idCompetence })'>Confirmer</a>
-                    <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "Programme", new { idProgramme = Model.idProgramme })'">Annuler</div>
+                    <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "DevisMinistere", new { idDevis = Model.idDevis })'">Annuler</div>
                 </div>
             </div>
         </div>
