--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ApplicationPlanCadre.Models.Programme
+﻿@model ApplicationPlanCadre.Models.DevisMinistere
 
 @{
     ViewBag.Title = "Edit";
@@ -9,11 +9,11 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idProgramme)
+        @Html.HiddenFor(model => model.idDevis)
 
         <div class="form-horizontal form-box single-action">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <h3>Modification d'un programme</h3>
+            <h3>Modification d'un devisMinistere</h3>
             <hr />
             <div class="champ">
                 @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
