--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ApplicationPlanCadre.Models.Programme>
+﻿@model IEnumerable<ApplicationPlanCadre.Models.DevisMinistere>
 
 <div class="crud-list">
     <table>
@@ -23,7 +23,7 @@
         @foreach (var item in Model)
         {
             bool valide = item.EnonceCompetence.Count == 0;
-            string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idProgramme }) : @Url.Action("Create");
+            string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idDevis }) : @Url.Action("Create");
             string cssClass = valide ? "valide" : "";
             <tr ondblclick="location.href='@dblclickEvent'" class="@cssClass">
                 <td>
@@ -38,7 +38,7 @@
                 <td class="action-cell">
                     @if (valide)
                     {
-                        <a href='@Url.RouteUrl("edit-programme", new { id = item.idProgramme })'>
+                        <a href='@Url.RouteUrl("edit-devisMinistere", new { id = item.idDevis })'>
                             <span class="glyphicon glyphicon-pencil"><!----></span>
                         </a>
                     }
@@ -46,7 +46,7 @@
                 <td class="action-cell">
                     @if(valide)
                     {
-                        <a href='@Url.Action("DeleteConfirmed", new { id = item.idProgramme })'>
+                        <a href='@Url.Action("DeleteConfirmed", new { id = item.idDevis })'>
                             <span class="glyphicon glyphicon-trash"><!----></span>
                         </a>
                     }
