--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -16,7 +16,7 @@
 
         @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
         {
-            <a class="icon" href='@Url.RouteUrl("")'>
+            <a class="icon">
                 <span class="glyphicon glyphicon-briefcase"></span>
                 <p>Stage</p>
             </a>
