--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         
                 @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
                 {
-                    <a class="tuile" href='@Url.RouteUrl("")'>
+                    <a class="tuile">
                         <span class="glyphicon glyphicon-briefcase"></span>
                         <p>Stage</p>
                     </a>
