--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/ConsoleAdmin.cshtml
@@ -16,12 +16,12 @@
             <p>Gestion des devis ministériels</p>
         </a>
 
-        <a class="icon" href='@Url.RouteUrl("")'>
+        <a class="icon">
             <span class="glyphicon glyphicon-education"></span>
             <p>Gestion des programmes</p>
         </a>
 
-        <a class="icon" href='@Url.Action("Index", "Account")'>
+        <a class="icon">
             <span class="glyphicon glyphicon-user"></span>
             <p>Gestion des utilisateurs</p>
         </a>
