--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Index.cshtml
@@ -1,19 +1,21 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.DevisMinistere>
 
 @{
-    ViewBag.Title = "DevisMinistere";
+    ViewBag.Title = "Devis ministériels";
 }
 
 <div id="super-view">
     @Html.Action("_TreeView")
     <div id="info-display" class="container-fluid">
         <div id="info-detail">
-            <h1>DevisMinisteres</h1>
+            <h1>Devis ministériels</h1>
             <hr />
             @foreach (var devisMinistere in Model)
             {                                       
                 <a class="info-child clearfix" href='@Url.Action("Info", new { idDevis = devisMinistere.idDevis })'>
-                    <p class="gauche">@Html.DisplayFor(ec => devisMinistere.EnteteProgramme.commentaire)</p> 
+                    <p class="gauche">
+                        @Html.DisplayFor(ec => devisMinistere.EnteteProgramme.nom)
+                    </p> 
                     <p class="droite">@Html.DisplayFor(model => devisMinistere.codeProgramme)-@Html.DisplayFor(model => devisMinistere.annee)-@Html.DisplayFor(model => devisMinistere.codeSpecialisation)</p>
                 </a>
             }
